@@ -14,20 +14,25 @@ PositionDodge <- proto(Position, {
   }
   
   examples <- function(.) {
-    ggplot(mtcars, aes(x=factor(cyl), fill=factor(vs))) + geom_bar(position="dodge")
+    ggplot(mtcars, aes(x=factor(cyl), fill=factor(vs))) +
+      geom_bar(position="dodge")
     ggplot(diamonds, aes(x=price, fill=cut)) + geom_bar(position="dodge")
     # see ?geom_boxplot and ?geom_bar for more examples
     
-    df <- data.frame(x=c("a","a","b","b"), y=1:4)
-    p <- qplot(x, y, data=df, position="dodge", geom="bar", stat="identity")
-    p 
-    p + geom_linerange(aes(ymin= y - 1, ymax = y+1), position="dodge")
-
     # Dodging things with different widths is tricky
-    p + geom_errorbar(aes(ymin= y - 1, ymax = y+1), width=0.2, position="dodge")
-    # You can specify the width to use for dodging (instead of the actual
-    # width of the object) as follows
-    p + geom_errorbar(aes(ymin= y - 1, ymax = y+1, width=0.2), position=position_dodge(width=0.90))
+    df <- data.frame(x=c("a","a","b","b"), y=1:4)
+    (p <- qplot(x, y, data=df, position="dodge", geom="bar", stat="identity"))
+    
+    p + geom_linerange(aes(ymin = y-1, ymax = y+1), position="dodge")
+    # You need to explicitly specify the width for dodging
+    p + geom_linerange(aes(ymin = y-1, ymax = y+1), 
+      position = position_dodge(width = 0.9))
+      
+    # Similarly with error bars:
+    p + geom_errorbar(aes(ymin = y-1, ymax = y+1), width = 0.2,
+      position="dodge")
+    p + geom_errorbar(aes(ymin = y-1, ymax = y+1, width = 0.2),
+      position = position_dodge(width = 0.90))
   }
 })
 
