@@ -20,3 +20,4 @@ ggplot2 0.8.8 (2010-XX-XX) ----------------------------------------
 * coord_polar and coord_polar: new munching system that uses distances (as defined by the coordinate system) to figure out how many pieces each segment should be broken in to (thanks to prompting from Jean-Olivier Irisson)
 * stat_bin no longer drops 0-count bins by default
 * guides: extra 0.5 line border around legend (fixes #71)
+* geom_line: can now stack lines again with position = "stack" (fixes #74)
